Cards da seção "Currículo"

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@
 
 h1 {
     font-size: 64px;
-    font-family: 'Roboto';
+    font-family: Roboto;
     line-height: 30px;
     color: $color-primary;
 }
@@ -15,4 +15,12 @@ h2 {
     line-height: 44px;
     
     color: $color-secondary-highlight;
+}
+
+p {
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
 }
