--- a/src/components/sections/Resume/resumeSection.module.scss
+++ b/src/components/sections/Resume/resumeSection.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     width: 100%;
-    height: 1001px;
+    overflow: auto;
 
     background: $color-secondary-light;
 }
@@ -13,12 +13,17 @@
     align-items: center;
     padding: 0px;
 
-    width: 660px;
+    width: 800px;
+    // height: 1000px;
 
-    margin: 20px auto;
+    margin: 20px auto 50px;
     top: 44px;
 
-    h2 {
+    @media (max-width: 978px) {
+        width: 660px;
+    }
+
+    .title {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -31,15 +36,27 @@
         margin: 24px 0px;
     }
 
-    img {
+    .photo {
         width: 187px;
         height: 187px;
         clip-path: circle();
 
         flex: none;
-        order: 1;
         flex-grow: 0;
         margin: 24px 0px;
+    }
+
+    .cardContainer {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: space-between;
+        flex-flow: row wrap;
+
+        > * {
+            flex: none;
+            margin: 20px;        
+        }
     }
 }
 
