--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -1,4 +1,4 @@
-@import '@styles/variables.scss';
+@import "@styles/variables.scss";
 
 .header {
     display: flex;
@@ -12,7 +12,7 @@
     width: 100%;
     height: 131px;
     top: 0;
-    left:0;
+    left: 0;
     z-index: 10;
 
     background: $white;
@@ -32,15 +32,15 @@
         order: 0;
         flex-grow: 1;
         margin: 0px 10px;
-    
+
         .navBarLogo {
             width: 335px;
             height: 61px;
             left: 0px;
             top: 0px;
-    
+
             // background: url(../../static/logo_title.png);
-    
+
             flex: none;
             order: 0;
             flex-grow: 0;
@@ -73,7 +73,7 @@
                 // justify-content: center;
                 // align-items: center;
                 font-size: 24px;
-                font-family: 'Mulish', $font-fallback;
+                font-family: "Mulish", $font-fallback;
                 color: $color-secondary;
                 text-align: center;
                 vertical-align: middle;
