--- a/src/components/sections/About/aboutSection.module.scss
+++ b/src/components/sections/About/aboutSection.module.scss
@@ -14,7 +14,6 @@
     padding: 0px;
 
     width: 800px;
-    // height: 1000px;
 
     margin: 20px auto 50px;
     top: 44px;
@@ -23,32 +22,43 @@
         width: 660px;
     }
 
-    .title {
+    .header {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
+        padding: 0px;
+
         width: 100%;
 
-        flex: none;
-        margin: 24px 0px;
+        h2 {
+            width: 100%;
+            text-align: center;
+
+            margin: 24px 0;
+        }
+
+        p {
+            text-align: center;
+        }
     }
 
-    .photo {
-        width: 187px;
-        height: 187px;
-        clip-path: circle();
+    .diseasesSection {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        width: 100%;
 
-        flex: none;
-        flex-grow: 0;
-        margin: 24px 0px;
+        margin: 31px 0;
     }
 
     .cardContainer {
         width: 100%;
         display: flex;
-        justify-content: space-evenly;
-        align-items: space-between;
-        flex-flow: row wrap;
+        flex-direction: row;
+        padding: 0;
+
+        overflow-x: scroll;
 
         > * {
             flex: none;
