--- a/src/components/sections/GetInTouch/getInTouchSection.module.scss
+++ b/src/components/sections/GetInTouch/getInTouchSection.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     overflow: auto;
 
-    background: $color-secondary-light;
+    background: $color-primary-light;
 }
 
 .innerContainer {
@@ -13,7 +13,7 @@
     align-items: center;
     padding: 0px;
 
-    width: 800px;
+    width: 70%;
     // height: 1000px;
 
     margin: 20px auto 50px;
@@ -31,28 +31,5 @@
 
         flex: none;
         margin: 24px 0px;
-    }
-
-    .photo {
-        width: 187px;
-        height: 187px;
-        clip-path: circle();
-
-        flex: none;
-        flex-grow: 0;
-        margin: 24px 0px;
-    }
-
-    .cardContainer {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: space-between;
-        flex-flow: row wrap;
-
-        > * {
-            flex: none;
-            margin: 20px;
-        }
     }
 }
