--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@import "./variables.scss";
 
 h1 {
     font-size: 64px;
@@ -13,7 +13,17 @@ h2 {
     font-weight: normal;
     font-size: 36px;
     line-height: 44px;
-    
+
+    color: $color-secondary;
+}
+
+h3 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+
     color: $color-secondary-highlight;
 }
 
