--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,13 @@
 //Fonts
-$font-fallback: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$font-fallback: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 
 // Colors
-$color-primary: #2EA690;
-$color-primary-light: #F6F9F8;
-$color-primary-highlight: #47EBCD;
-$color-secondary: #371E59;
-$color-secondary-light: #F7F5FA;
-$color-secondary-highlight: #6C45A1;
-$white: #FFFFFF;
+$color-primary: #2ea690;
+$color-primary-light: #f6f9f8;
+$color-primary-highlight: #47ebcd;
+$color-secondary: #371e59;
+$color-secondary-light: #f7f5fa;
+$color-secondary-highlight: #6c45a1;
+$white: #ffffff;
 $black: #000000;
