--- a/src/components/sections/GetInTouch/getInTouchSection.module.scss
+++ b/src/components/sections/GetInTouch/getInTouchSection.module.scss
@@ -2,6 +2,7 @@
 
 .container {
     width: 100%;
+    height: 350px;
     overflow: auto;
 
     background: $color-primary-light;
@@ -13,8 +14,7 @@
     align-items: center;
     padding: 0px;
 
-    width: 70%;
-    // height: 1000px;
+    width: 85%;
 
     margin: 20px auto 50px;
     top: 44px;
@@ -23,13 +23,10 @@
         width: 660px;
     }
 
-    .title {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    h2 {
         width: 100%;
+        text-align: center;
 
-        flex: none;
-        margin: 24px 0px;
+        margin: 24px 0;
     }
 }
