--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -12,11 +12,6 @@
     background: $color-primary;
     border-radius: 50px;
 
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    margin: 25px 0px;
-
     &:hover {
         color: $color-secondary;
         background: $color-primary-highlight;
@@ -40,8 +35,10 @@
         color: $white;
 
         flex: none;
-        order: 0;
-        flex-grow: 0;
         margin: 0px 10px;
+
+        @media (max-width: 978px) {
+            font-size: 14px;
+        }
     }
 }
