--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,10 @@ h1 {
     font-family: Roboto;
     line-height: 30px;
     color: $color-primary;
+
+    @media (max-width: 414px) {
+        font-size: 48px;
+    }
 }
 
 h2 {
