--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -6,6 +6,8 @@
     min-width: 1440px;
     margin: 0 auto;
 
+    overflow: hidden;
+
     background: $color-primary-light;
 
     @media (max-width: 1440px) {
