--- a/src/components/NavBar/navBar.module.scss
+++ b/src/components/NavBar/navBar.module.scss
@@ -1,6 +1,6 @@
 @import "@styles/variables.scss";
 
-.header {
+.container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -36,56 +36,44 @@
         .navBarLogo {
             width: 335px;
             height: 61px;
-            left: 0px;
-            top: 0px;
-
-            // background: url(../../static/logo_title.png);
 
             flex: none;
-            order: 0;
             flex-grow: 0;
-            margin: 0;
         }
 
         nav {
             display: flex;
-            flex-direction: row;
             justify-content: flex-end;
+            flex-direction: row;
             align-items: center;
-            padding: 6px 1px;
+            padding: 6px 0;
 
-            width: 439px;
-            height: 61.04px;
-            left: 901px;
-            top: 0px;
+            width: 100%;
+            height: 60px;
 
             background: $white;
 
-            flex: none;
-            order: 1;
-            align-self: stretch;
-            flex-grow: 0;
-            margin: 0;
-
             a {
-                // display: flex;
-                // flex-direction: row;
-                // justify-content: center;
-                // align-items: center;
+                text-decoration: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: center;
+
                 font-size: 24px;
                 font-family: "Mulish", $font-fallback;
                 color: $color-secondary;
-                text-align: center;
-                vertical-align: middle;
-                text-decoration: none;
+                background-color: inherit;
                 padding: 3px 12px;
 
-                height: 31px;
+                height: 100%;
 
-                flex: 1 1 auto;
-                order: 3;
-                flex-grow: 0;
+                flex: 0 1 auto;
                 margin: 0px 10px;
+
+                &:hover {
+                    background-color: $color-secondary-light;
+                }
 
                 @media (max-width: 976px) {
                     font-size: 18px;
