--- a/src/components/ContactCard/contactCard.module.scss
+++ b/src/components/ContactCard/contactCard.module.scss
@@ -21,6 +21,7 @@
             flex-direction: column;
 
             h1 {
+                line-height: 30px;
                 font-size: 24px;
                 margin: 0;
             }
