--- a/src/components/sections/Cover/coverSection.module.scss
+++ b/src/components/sections/Cover/coverSection.module.scss
@@ -3,8 +3,30 @@
 .container {
     width: 100%;
     height: 1001px;
+    overflow: hidden;
 
     background: $color-primary-light;
+
+    img {
+        content: "";
+        position: absolute;
+        width: 1490px;
+        height: 1082px;
+        left: -203px;
+        top: 9px;
+
+        background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0.5) 0%,
+            rgba(255, 255, 255, 0) 41.67%,
+            rgba(39, 39, 39, 0.51) 67.71%,
+            rgba(41, 19, 72, 0.65) 89.06%
+        );
+        background-blend-mode: multiply;
+
+        mask-image: url("@images/banner_mask.svg");
+        mask-repeat: no-repeat;
+    }
 
     header {
         display: flex;
@@ -15,14 +37,15 @@
 
         position: absolute;
         right: 50px;
-        top: 540px;
+        top: 740px;
 
         > * {
             margin: 10px 0;
         }
 
         @media (max-width: 978px) {
-            top: 680px;
+            width: 50%;
+            right: 20px;
         }
 
         .name {
